testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.hir
error SEM3020 testdata/golden/hir_borrow/invalid/move_forbidden_when_borrowed.sg:4:21 cannot move 'x' while it is shared-borrowed

== HIR ==
module 

fn t() -> nothing (id=1, sym=566) {
  let x: string = "\"hi\""
  let r: &string [&] = (& x): &string
  let y: string = x
  return
}

borrow edges:
  L1133(r) (&) borrows L1132(x) at 0:56-58 scope=S3
events:
  borrow_start L1133(r) -> L1132(x) (&) at 0:56-58 scope=S3 note="B1"
  move L1132(x) at 0:80-81 scope=S3 note="issue=frozen borrow=B1"
  borrow_end L1133(r) -> L1132(x) scope=S3 note="scope_end B1"
move plan:
  L1132(x): MoveForbidden (move blocked by frozen (B1))
  L1133(r): MoveCopy (copy type)
  L1134(y): MoveNeedsDrop (non-copy (drop))

